2015-08-12  Mikael Magnusson  <mikachu@gmail.com>

	* 36077: Functions/VCS_Info/Backends/VCS_INFO_get_data_bzr,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_p4,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_svk,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_svn,
	Functions/VCS_Info/VCS_INFO_formats,
	Functions/VCS_Info/VCS_INFO_hook,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set, Functions/VCS_Info/vcs_info,
	Functions/VCS_Info/vcs_info_lastmsg,
	Functions/VCS_Info/vcs_info_printsys: vcs_info: stop exporting
	everything

	* 36078: Doc/Zsh/contrib.yo: vcs_info: Adjust documentation for
	no longer exporting

	* 36116: Completion/Unix/Command/_git: various fixes

	* 36117: Completion/Unix/Command/_wget: complete headers for
	--header and add --no-use-server-timestamps

	* 36118: Completion/Unix/Command/_imagemagick: complete all
	files if image files didn't match

	* 36120: Completion/Unix/Command/_sort: Fix syntax error

	* 36119: Completion/Zsh/Command/_strftime: Add completion for
	zsh/datetime's strftime builtin

2015-08-11  Barton E. Schaefer  <schaefer@zsh.org>

	* 36108: NEWS: list of major changes so far since 5.0.8

	* 36104: Src/exec.c, Src/jobs.c: change order of child_block()
	and dont_queue_signals() to resolve yet another race condition

	* 36092: Doc/Zsh/mod_zpty.yo, Src/Modules/zpty.c: return the pty
	master file descriptor in $REPLY for use with "zle -F" etc.

	* 36090: Src/init.c: keep signals queued for preprompt()

2015-08-11  Oliver Kiddle <opk@zsh.org>

	* 36096: Src/Zle/zle_move.c: special . mark in vi mode

	* 36044: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list, Src/Zle/zle_keymap.c,
	Src/Zle/zle_move.c: deactivate-region widget for escape in visual mode

	* 35952: Jun-ichi Takimoto: Src/Zle/zle_bindings.c: bind escape in
	vi mode so it is a full key sequence and later keys aren't dropped

2015-08-11  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
