@@ -1,3 +1,8 @@
+2015-08-12  Oliver Kiddle <opk@zsh.org>
+
+	* 35834 (tweaked): Src/Zle/zle_misc.c: strip a final newline from
+	pasted text: inserting is hard to tell apart from accepting it
+
 2015-08-12  Mikael Magnusson  <mikachu@gmail.com>
 
 	* 36077: Functions/VCS_Info/Backends/VCS_INFO_get_data_bzr,
